# sk1llz

./: .gitignore  CLAUDE.md  README.md  flake.nix  skills.json
.github/workflows/: ci.yml  claude-pr-review.yml  claude.yml  release.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
docs/agents/: runtime.md  troubleshooting.md  workflow.md
docs/agents/cli/: guide.md
docs/agents/paradigms/: guide.md
docs/agents/systems-architecture/: guide.md
domains/api-design/fielding/: SKILL.md
domains/api-design/lane/: SKILL.md
domains/api-design/mendez/: SKILL.md
domains/cli-design/hashimoto/: SKILL.md
domains/databases/helland/: SKILL.md
domains/databases/pavlo/: SKILL.md
domains/databases/stonebraker/: SKILL.md
domains/geospatial/s2-geometry/: SKILL.md
domains/networking/gettys-bufferbloat/: SKILL.md
domains/networking/jacobson/: SKILL.md
domains/problem-solving/feynman/: SKILL.md
domains/problem-solving/polya/: SKILL.md
domains/search/google-search-architecture/: SKILL.md
domains/systems-architecture/dean/: SKILL.md
meta/validation/: validate.py
organizations/aqr/: SKILL.md
organizations/citadel/: SKILL.md
organizations/cloudflare/: SKILL.md
organizations/de-shaw/: SKILL.md
organizations/hashicorp/: SKILL.md
organizations/jane-street/: SKILL.md
organizations/jump-trading/: SKILL.md
organizations/renaissance/: SKILL.md
organizations/two-sigma/: SKILL.md
organizations/uunet/: SKILL.md
organizations/virtu/: SKILL.md
scripts/: elevate-skills.sh  enrich_tags.py  generate_manifest.py  install.sh
(+152 files in other folders)
