[package]
name = "sk1llz"
version = "0.1.0"
edition = "2021"
authors = ["copyleftdev"]
description = "A package manager for AI coding skills"
license = "Apache-2.0"
repository = "https://github.com/copyleftdev/sk1llz"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
fuzzy-matcher = "0.3"
dirs = "5"
colored = "2"
indicatif = "0.17"

[profile.release]
strip = true
lto = true
codegen-units = 1
